# libcma-app-templates

./: README.md
cpp/: .dockerignore  Dockerfile  Makefile
python/: Dockerfile
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs
